ProFit/objects/Speaker__c.object
<CustomObject>
    <description>Speaker Object for Pro Fit App</description>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company Name</description>
        <inlineHelpText>Company Name</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Contact Number</description>
        <inlineHelpText>Contact Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Speaker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Speaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>